force-app/main/default/objects/C360_CapacityVersusActual__c.object
<CustomObject>
    <description>Capacity Versus Actual report</description>
    <fields>
        <fullName>ActualVolume__c</fullName>
        <label>Actual Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillingDate__c</fullName>
        <label>Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CapacityVolume__c</fullName>
        <description>Convert to MT</description>
        <label>Capacity Volume (MT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Capacity</label>
        <referenceTo>C360_Capacity__c</referenceTo>
        <relationshipLabel>Capacity Versus Actual</relationshipLabel>
        <relationshipName>Capacity_Versus_Actual</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CompanyName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Capacity Versus Actual</relationshipLabel>
        <relationshipName>Capacity_Versus_Actual</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DistributionChannel__c</fullName>
        <label>Distribution Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DistributionChannel</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>ExternalID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>C360_Product__c</referenceTo>
        <relationshipLabel>Capacity Versus Actual</relationshipLabel>
        <relationshipName>Capacity_Versus_Actual</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesOrganization__c</fullName>
        <label>Sales Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SalesOrganization</valueSetName>
        </valueSet>
    </fields>
    <label>Capacity Versus Actual</label>
    <nameField>
        <displayFormat>CA-{0000000}</displayFormat>
        <label>Capacity Versus Actual Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>